# sun_set

./: .coverage  .gitignore  .portfolio.json  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  SunSet.spec  main.py  output.txt  pyproject.toml  requirements.txt  sun_set.py  sun_set_city.py  sun_set_cv.py
.github/workflows/: build-app.yml
assets/icons/: sunset.icns
docs/: image_export_plan.md  image_export_settings.md  image_export_todo.md  roadmap_1_1.md  user_guide.md
examples/image_export/: default_white.json
scripts/: build_app.py  create_app_icons.py
src/: city.py
src/sun_set/: app_info.py  export_image_example.py  main.py  resources.py  test_render_image.py
src/sun_set/api/: file_manager.py
src/sun_set/constants/: messages.py  project_defaults.py  (+1 more)
tests/: conftest.py  test_app_info.py  test_astronmy.py  test_astronomy.py  test_city_model.py  test_custom_delegate.py  test_file_manager.py  test_main.py  test_main_view.py  test_resources.py  test_sunset_table_view.py  test_table_model.py
tests/image_export/: conftest.py  test_errors.py  test_layout.py  test_renderer.py  test_service.py  test_settings.py
tests/integration/: test_project_roundtrip.py
tests/services/: test_city_file_service.py  test_city_service.py  test_city_sunset_status_service.py  test_dialog_service.py  test_image_export_workflow.py  test_project_file_service.py  test_project_state_service.py  test_project_window_state.py  test_project_workflow.py  test_sunset_workflow.py
tests/storage/: test_city_json_storage.py  test_json_storage.py
tests/views/: test_about_dialog.py  test_help_dialog.py  test_image_export_settings_dialog.py
(+32 files in other folders)
