[project]
name = "sun-set"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astral>=3.2",
    "pillow>=12.1.0",
    "pyqt6>=6.10.2",
]

# Секция для запуска через uv run start-app
[project.scripts]
start-app = "sun_set.main:main"

# Ваши инструменты разработки (оставляем как было)
[dependency-groups]
dev = ["pre-commit>=4.5.1"]

# Настройка сборки: позволяет uv "видеть" пакет внутри src
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sun_set"]
