[project]
name = "sun-set"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astral>=3.2",
    "dacite>=1.9.2",
    "pillow>=12.1.0",
    "pyqt6>=6.10.2",
    "tzdata>=2025.3",
]

# Секция для запуска через uv run start-app
[project.scripts]
start-app = "sun_set.main:main"

# Ваши инструменты разработки (оставляем как было)
[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-qt>=4.5.0",
]

[tool.ty.src]
exclude = ["tests/**"]


# Настройка сборки: позволяет uv "видеть" пакет внутри src
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sun_set"]


[tool.ruff]
[tool.ruff.lint]
# Включаем Pyflakes (F) и Isort (I) — они отвечают за детекцию и автоимпорт
select = ["F", "I"]
fixable = ["ALL"]
